--- a/test/data/report-with-colors.html
+++ b/test/data/report-with-colors.html
@@ -72,21 +72,12 @@
 
       <h1 class="text-primary">TestCafe Test Summary</h1>
       <div class="client-logo" style="padding:15px"></div>
-      <div class="bg-primary" style="padding:15px;box-shadow: 6px 6px 6px 6px #00000033;border-radius: 10px;">
-        <h3>Summary</h3><br>
-        <p class="lead">Start Time: 1/1/1970 0:0:0</p>
-        <p class="lead">Browsers: Chrome 41.0.2227 / Mac OS X 10.10.1, Firefox 47 / Mac OS X 10.10.1</p>
-        <p class="lead">Duration: 0s</p>
-        <p class="lead">Tests Failed: 2 out of 6</p>
-        <p class="lead">Tests Skipped: 0</p>
-      </div><br>
       <table class="table sortable" style="padding:15px;box-shadow: 6px 6px 6px 6px #00000033;border-radius: 10px;">
         <thead>
           <tr>
             <th>#</th>
             <th>Fixture</th>
             <th>Test Name</th>
-            <th>Browsers</th>
             <th>Duration</th>
             <th>Result</th>
           </tr>
@@ -95,8 +86,8 @@
            <tr class="success">
   <td>1</td>
   <td>First fixture</td>
-  <td>First test in first fixture</td>
-  <td>Chrome 41.0.2227 / Mac OS X 10.10.1, Firefox 47 / Mac OS X 10.10.1</td>
+  <td>First test in first fixture<br>
+      this is new line test</td>
   <td>1m 14s</td>
   <td>passed</td>
  </tr>
@@ -104,7 +95,6 @@
   <td>2</td>
   <td>First fixture</td>
   <td>Second test in first fixture</td>
-  <td>Chrome 41.0.2227 / Mac OS X 10.10.1, Firefox 47 / Mac OS X 10.10.1</td>
   <td>1m 14s</td>
   <td><a href="#test-2">failed</a></td>
  </tr>
@@ -112,7 +102,6 @@
   <td>3</td>
   <td>First fixture</td>
   <td>Third test in first fixture</td>
-  <td>Chrome 41.0.2227 / Mac OS X 10.10.1, Firefox 47 / Mac OS X 10.10.1</td>
   <td>1m 14s</td>
   <td>passed</td>
  </tr>
@@ -120,7 +109,6 @@
   <td>4</td>
   <td>Second fixture</td>
   <td>First test in second fixture</td>
-  <td>Chrome 41.0.2227 / Mac OS X 10.10.1, Firefox 47 / Mac OS X 10.10.1</td>
   <td>1m 14s</td>
   <td>passed</td>
  </tr>
@@ -128,7 +116,6 @@
   <td>5</td>
   <td>Second fixture</td>
   <td>Second test in second fixture</td>
-  <td>Chrome 41.0.2227 / Mac OS X 10.10.1, Firefox 47 / Mac OS X 10.10.1</td>
   <td>1m 14s</td>
   <td>passed</td>
  </tr>
@@ -136,7 +123,6 @@
   <td>6</td>
   <td>Second fixture</td>
   <td>Third test in second fixture</td>
-  <td>Chrome 41.0.2227 / Mac OS X 10.10.1, Firefox 47 / Mac OS X 10.10.1</td>
   <td>0s</td>
   <td>passed</td>
  </tr>
@@ -144,7 +130,6 @@
   <td>7</td>
   <td>Third fixture</td>
   <td>First test in third fixture</td>
-  <td>Chrome 41.0.2227 / Mac OS X 10.10.1, Firefox 47 / Mac OS X 10.10.1</td>
   <td>1m 14s</td>
   <td><a href="#test-7">failed</a></td>
  </tr>
@@ -152,7 +137,6 @@
         </tbody>
         <thead>
           <tr>
-            <th></th>
             <th></th>
             <th></th>
             <th></th>
