日本語化、合計秒数の表示、結果の表示

--- a/test/data/report-with-colors.html
+++ b/test/data/report-with-colors.html
@@ -70,16 +70,16 @@
     </div>
     <div class="container">
 
-      <h1 class="text-primary">TestCafe Test Summary</h1>
+      <h1 class="text-primary">TestCafe</h1>
       <div class="client-logo" style="padding:15px"></div>
       <table class="table sortable" style="padding:15px;box-shadow: 6px 6px 6px 6px #00000033;border-radius: 10px;">
         <thead>
           <tr>
             <th>#</th>
-            <th>Fixture</th>
-            <th>Test Name</th>
-            <th>Duration</th>
-            <th>Result</th>
+            <th>画面</th>
+            <th>項目</th>
+            <th>所要時間</th>
+            <th>結果</th>
           </tr>
         </thead>
         <tbody>
@@ -88,50 +88,50 @@
   <td>First fixture</td>
   <td>First test in first fixture<br>
       this is new line test</td>
-  <td>1m 14s</td>
-  <td>passed</td>
+  <td>1分 14秒</td>
+  <td>成功</td>
  </tr>
  <tr class="danger">
   <td>2</td>
   <td>First fixture</td>
   <td>Second test in first fixture</td>
-  <td>1m 14s</td>
-  <td><a href="#test-2">failed</a></td>
+  <td>1分 14秒</td>
+  <td><a href="#test-2">失敗</a></td>
  </tr>
  <tr class="success">
   <td>3</td>
   <td>First fixture</td>
   <td>Third test in first fixture</td>
-  <td>1m 14s</td>
-  <td>passed</td>
+  <td>1分 14秒</td>
+  <td>成功</td>
  </tr>
  <tr class="success">
   <td>4</td>
   <td>Second fixture</td>
   <td>First test in second fixture</td>
-  <td>1m 14s</td>
-  <td>passed</td>
+  <td>1分 14秒</td>
+  <td>成功</td>
  </tr>
  <tr class="success">
   <td>5</td>
   <td>Second fixture</td>
   <td>Second test in second fixture</td>
-  <td>1m 14s</td>
-  <td>passed</td>
+  <td>1分 14秒</td>
+  <td>成功</td>
  </tr>
  <tr class="success">
   <td>6</td>
   <td>Second fixture</td>
   <td>Third test in second fixture</td>
-  <td>0s</td>
-  <td>passed</td>
+  <td>0秒</td>
+  <td>成功</td>
  </tr>
  <tr class="danger">
   <td>7</td>
   <td>Third fixture</td>
   <td>First test in third fixture</td>
-  <td>1m 14s</td>
-  <td><a href="#test-7">failed</a></td>
+  <td>1分 14秒</td>
+  <td><a href="#test-7">失敗</a></td>
  </tr>
 
         </tbody>
@@ -140,8 +140,8 @@
             <th></th>
             <th></th>
             <th></th>
-            <th></th>
-            <th></th>
+            <th>0秒</th>
+            <th>4 / 6</th>
           </tr>
         </thead>
       </table>
