Fixtureを改行に対応

--- a/test/data/report-with-colors.html
+++ b/test/data/report-with-colors.html
@@ -133,6 +133,14 @@
   <td>1分 14秒</td>
   <td><a href="#test-7">失敗</a></td>
  </tr>
+ <tr class="success">
+  <td>8</td>
+  <td>Forth fixture<br>
+      this is new line test</td>
+  <td>Forth test in first fixture</td>
+  <td>0秒</td>
+  <td>成功</td>
+ </tr>
 
         </tbody>
         <thead>
